--- a/pages/layout/styles/css/lightbox.css
+++ b/pages/layout/styles/css/lightbox.css
@@ -24,7 +24,14 @@ body:after {
 @media (max-width: 600px) {
     .wrap {
         display: grid;
-        grid-template-columns: 100% 100%;
+        grid-template-columns: 100%;
+        grid-template-rows: 25%;
+    }
+    .blocks {
+        margin-bottom: 20px !important;
+    }
+    .blocks-video {
+        height: 350px;
     }
 }
 
